[package]
name = "codecharacter-driver-2022"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cc_driver"
path = "src/lib.rs"

[dependencies]
nix = "0.23.0"
amiquip = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"